DuPont DevSB/src/objects/MetadataItem__c.object
<CustomObject>
    <description>Many to Many relations with Metadata Object</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <description>master relation to Metadata</description>
        <label>Metadata</label>
        <referenceTo>Metadata__c</referenceTo>
        <relationshipName>MetadataMaster</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelatedMetadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Metadata</description>
        <inlineHelpText>Metadata Items (Metadata__c)</inlineHelpText>
        <label>Metadata Items (Metadata__c)</label>
        <referenceTo>Metadata__c</referenceTo>
        <relationshipName>MetadataItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Relationship Type</description>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Metadata Item</label>
    <nameField>
        <displayFormat>MDI{0000000000}</displayFormat>
        <label>MDI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>